Terraform/modules/Security Groups/main.tf
# Public EC2 Security Group: Cho phép SSH từ một IP cụ thể
resource "aws_security_group" "public_ec2_sg" {
  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip_address]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.vpc_name}-public-ec2-sg"
  }
}

# Private EC2 Security Group: Cho phép kết nối từ Public EC2
resource "aws_security_group" "private_ec2_sg" {
  vpc_id = var.vpc_id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.public_ec2_sg.id]  # Chỉ cho phép từ Public EC2 SG
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.vpc_name}-private-ec2-sg"
  }
}
